fix: overflow css && rm extra div

--- a/src/components/Layout/style.css
+++ b/src/components/Layout/style.css
@@ -1,5 +1,5 @@
-main{
-    height: 1311px;
+main {
+    min-height: calc(100%  - 476px);
     background-color: #232323;
     padding: 0 5%;
     position: relative;
