--- a/src/components/MovieList/style.css
+++ b/src/components/MovieList/style.css
@@ -1,10 +1,10 @@
 .movie-list {
-    height: 80vh;
     display: grid;
     grid-column-gap: 55px;
     grid-row-gap: 51px;
     justify-content: space-between;
     grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+    padding: 0 0 70px 0;
 }
 
 .movie-list-h3 {
