--- a/src/components/NavigationMain/style.css
+++ b/src/components/NavigationMain/style.css
@@ -8,12 +8,16 @@
     text-transform: uppercase;
     list-style-type: none;
     color: #FFFFFF;
-    margin-right: 30px;
+    /*margin-right: 30px;*/
 }
 
 .navigation-main__ul {
+    padding: 0;
     display: flex;
     margin: 20px 0;
+    justify-content: space-between;
+    width: 80%;
+    max-width: 600px;;
 }
 
 .main-header {
