--- a/src/components/SortBy/style.css
+++ b/src/components/SortBy/style.css
@@ -1,4 +1,9 @@
 .sort-by__title {
+    /*width: 25%;*/
+    /*min-width: 270px;*/
+    width: 270px;
+display: flex;
+    justify-content: space-between;
     text-transform: uppercase;
     font-family: 'Montserrat', sans-serif;
     font-style: normal;
@@ -13,8 +18,9 @@
 }
 
 .sort-by__select {
+    width: 60%;
     font-family: 'Montserrat', sans-serif;
-    margin-left: 31px;
+    /*margin-left: 31px;*/
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
